AG-11253 - prevent breaking words when wrapText=true

--- a/community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -750,7 +750,6 @@
 
     .ag-cell-wrap-text {
         white-space: normal;
-        word-break: break-all;
     }
 
     .ag-cell-wrapper {
